# pytest-parametrization-annotation

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: publish-release.yml  pull-request-validation.yml  run-checks.yml
examples/: test_basic.py  test_indirect.py
src/pytest_parametrization_annotation/: __init__.py  annotation.py  exceptions.py  functionality.py  plugin.py
tests/: test_case_marker.py  test_get_parameter_from_type_hints.py  test_get_parametrized_value.py  test_missing_parameters.py
tests/templates/test_case_marker/: missing_parameter.py  multiple_fixture_with_multiple_cases.py  multiple_fixture_with_multiple_cases_with_failing_test.py  single_fixture.py  single_fixture_with_multiple_cases.py  test_simple_parametrization.py.j2
tests/templates/test_missing_parameters/: test_error_messages.py.j2  test_with_default.py  with_default_factory.py
